[package]
name = "png-to-jpeg-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25.0", features = ["jpeg"] }
base64 = "0.22.0"
anyhow = "1.0.80"
bytes = "1.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
